[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intan-trigger-plotter"
version = "0.1.0"
description = "Moyennage de signaux Intan RHS sur fronts descendants d'ANALOG_IN 0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "matplotlib",
  "PySide6",
  "scipy",
]

[project.scripts]
intan-trigger-plotter = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "core", "gui", "plotting", "config", "load_intan_rhs_format"]
